--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -104,15 +104,19 @@
 								{{else}} --}}
 								<tr>
 									<td>
-										<button class="rollable resource-label" data-weapon-roll
-											data-weapon-id="{{item._id}}" class="resource-label">
+										<button class="rollable resource-label"
+											data-weapon-roll
+											data-weapon-id="{{item._id}}"
+										>
 											IN RANGE
 										</button>
 									</td>
 									<td>
-										<button class="rollable resource-label" data-weapon-roll
+										<button class="rollable resource-label"
+											data-weapon-roll
 											data-disadvantage="true"
-											data-weapon-id="{{item._id}}" class="resource-label">
+											data-weapon-id="{{item._id}}" class="resource-label"
+										>
 											DISADVANTAGED
 										</button>
 									</td>
