--- a/templates/item/item-ammo-sheet.hbs
+++ b/templates/item/item-ammo-sheet.hbs
@@ -1,40 +1,41 @@
 <style>
-.sheet .editor-content{
-	line-height:2;
-}
+  .sheet .editor-content {
+    line-height: 2;
+  }
 </style>
 
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{ cssClass }}" autocomplete="off">
   <header class="sheet-header">
-    <img class="profile-img bla" src="{{system.img}}" data-edit="img" title="{{item.name}}"/>
+    <img class="profile-img bla" src="{{ system.img }}" data-edit="img" title="{{ item.name }}" />
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
-	  <table>
+      <h1 class="charname">
+        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+      </h1>
+      <table>
         <tr>
-            <td>Cost</td>
-            <td>Load</td>
-            <td>Quantity</td>
-            <td>Type</td>
+          <td>Cost</td>
+          <td>Load</td>
+          <td>Quantity</td>
+          <td>Type</td>
         </tr>
         <tr>
-            <td><input type="number" name="system.cost" value="{{system.cost}}" /></td>
-            <td><input type="number" name="system.load" value="{{system.load}}" /></td>
-            <td><input type="number" name="system.quantity" value="{{system.quantity}}" /></td>
-            <td><input type="text" name="system.type" value="{{system.type}}" /></td>
+          <td><input type="number" name="system.cost" value="{{ system.cost }}" /></td>
+          <td><input type="number" name="system.load" value="{{ system.load }}" /></td>
+          <td><input type="number" name="system.quantity" value="{{ system.quantity }}" /></td>
+          <td><input type="text" name="system.type" value="{{ system.type }}" /></td>
         </tr>
       </table>
     </div>
   </header>
-  
- {{!-- Sheet Tab Navigation --}}
+
+  {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="effects">Effects</a> 
- </nav>
+    <a class="item" data-tab="effects">Effects</a>
+  </nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
-
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
@@ -42,15 +43,12 @@
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner
       editable=editable}}
     </div>
-	    
- {{!-- Effects Tab --}}
+
+    {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
       {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
     </div>
-
   </section>
 </form>
 
 {{log system}}
-
-
