--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -1,39 +1,68 @@
 <style>
-.sheet .editor-content{
-	line-height:2;
-}
+  .sheet .editor-content {
+    line-height: 2;
+  }
 </style>
 
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{ cssClass }}" autocomplete="off">
   <header class="sheet-header">
-    <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
+    <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" />
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
-	  <table>
-	  <tr>
-	  <td>Cost</td><td>AC</td><td>DT</td><td>Slots</td><td>Load</td><td>STR Req.</td></tr>
-	  <tr>
-	  <td><input type="number" name="system.base-cost.value" value="{{system.base-cost.value}}" /></td>
-	  <td><input type="number" name="system.armorClass.value" value="{{system.armorClass.value}}" /></td>
-	  <td><input type="number" name="system.damageThreshold.value" value="{{system.damageThreshold.value}}" /></td>
-	  <td><input type="number" name="system.slots.value" value="{{system.slots.value}}" /></td>
-	  <td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
-	  <td><input type="number" name="system.str-req.value" value="{{system.str-req.value}}" /></td>
-	  </tr>
-</table>
+      <h1 class="charname">
+        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+      </h1>
+      <table>
+        <tr>
+          <td>Cost</td>
+          <td>AC</td>
+          <td>DT</td>
+          <td>Slots</td>
+          <td>Load</td>
+          <td>STR Req.</td>
+        </tr>
+        <tr>
+          <td>
+            <input
+              type="number"
+              name="system.base-cost.value"
+              value="{{ system.base - cost.value }}"
+            />
+          </td>
+          <td>
+            <input
+              type="number"
+              name="system.armorClass.value"
+              value="{{ system.armorClass.value }}"
+            />
+          </td>
+          <td>
+            <input
+              type="number"
+              name="system.damageThreshold.value"
+              value="{{ system.damageThreshold.value }}"
+            />
+          </td>
+          <td>
+            <input type="number" name="system.slots.value" value="{{ system.slots.value }}" />
+          </td>
+          <td><input type="number" name="system.load.value" value="{{ system.load.value }}" /></td>
+          <td>
+            <input type="number" name="system.str-req.value" value="{{ system.str - req.value }}" />
+          </td>
+        </tr>
+      </table>
     </div>
   </header>
-  
- {{!-- Sheet Tab Navigation --}}
+
+  {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="upgrades">Upgrades</a> 
-    <a class="item" data-tab="effects">Effects</a> 
- </nav>
+    <a class="item" data-tab="upgrades">Upgrades</a>
+    <a class="item" data-tab="effects">Effects</a>
+  </nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
-
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
@@ -43,24 +72,20 @@
     </div>
     {{!-- Upgrades Tab --}}
     <div class="tab" data-group="primary" data-tab="upgrades">
-	<p>Upgrades can be crafted or purchased from certain vendors. When you have an armor upgrade you can
-	spend 1 minute to attach it to your armor, or spend 1
-	minute to remove it. You can only have one type of armor
-	upgrade on each set of armor. When you craft or purchase
-	an armor upgrade you cannot attach it to another set of
-	armor unless it is of the same material unless otherwise
-	specified.
-	</p>
-    </div>	
-	    
- {{!-- Effects Tab --}}
+      <p>
+        Upgrades can be crafted or purchased from certain vendors. When you have an armor upgrade
+        you can spend 1 minute to attach it to your armor, or spend 1 minute to remove it. You can
+        only have one type of armor upgrade on each set of armor. When you craft or purchase an
+        armor upgrade you cannot attach it to another set of armor unless it is of the same material
+        unless otherwise specified.
+      </p>
+    </div>
+
+    {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
       {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
     </div>
-
   </section>
 </form>
 
 {{log system}}
-
-
