--- a/templates/item/item-item-sheet.hbs
+++ b/templates/item/item-item-sheet.hbs
@@ -1,16 +1,18 @@
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{ cssClass }}" autocomplete="off">
   <header class="sheet-header">
-    <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
+    <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" />
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name" /></h1>
+      <h1 class="charname">
+        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+      </h1>
       <div class="grid grid-2col">
         <div class="resource">
           <label class="resource-label">Quantity</label>
-          <input type="text" name="system.qty" value="{{system.qty}}" data-dtype="Number" />
+          <input type="text" name="system.qty" value="{{ system.qty }}" data-dtype="Number" />
         </div>
         <div class="resource">
           <label class="resource-label">Weight</label>
-          <input type="text" name="system.weight" value="{{system.weight}}" data-dtype="Number" />
+          <input type="text" name="system.weight" value="{{ system.weight }}" data-dtype="Number" />
         </div>
       </div>
     </div>
@@ -24,7 +26,6 @@
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
-
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
@@ -38,22 +39,36 @@
       {{!-- As you add new fields, add them in here! --}}
       <div class="resource">
         <label class="resource-label">Roll Formula:</label>
-        <span>{{system.formula}}</span>
+        <span>{{ system.formula }}</span>
         <div class="grid grid-4col">
           <div class="grid-span-1">
             <label class="resource-label">Number of Dice</label>
-            <input type="text" name="system.roll.diceNum" value="{{system.roll.diceNum}}" data-dtype="Number" />
+            <input
+              type="text"
+              name="system.roll.diceNum"
+              value="{{ system.roll.diceNum }}"
+              data-dtype="Number"
+            />
           </div>
           <div class="grid-span-1">
             <label class="resource-label">Die Size</label>
-            <input type="text" name="system.roll.diceSize" value="{{system.roll.diceSize}}" data-dtype="String" />
+            <input
+              type="text"
+              name="system.roll.diceSize"
+              value="{{ system.roll.diceSize }}"
+              data-dtype="String"
+            />
           </div>
           <div class="grid-span-2">
             <label class="resource-label">Roll Modifier</label>
-            <input type="text" name="system.roll.diceBonus" value="{{system.roll.diceBonus}}" data-dtype="String" />
+            <input
+              type="text"
+              name="system.roll.diceBonus"
+              value="{{ system.roll.diceBonus }}"
+              data-dtype="String"
+            />
           </div>
         </div>
-
       </div>
     </div>
   </section>
