--- a/templates/item/item-meleeWeapon-sheet.hbs
+++ b/templates/item/item-meleeWeapon-sheet.hbs
@@ -4,77 +4,95 @@
   }
 </style>
 
-<form class="{{cssClass}}" autocomplete="off">
+<form class="{{ cssClass }}" autocomplete="off">
   <header class="sheet-header">
-    <img class="profile-img" src="{{system.img}}" data-edit="img" title="{{item.name}}" />
+    <img class="profile-img" src="{{ system.img }}" data-edit="img" title="{{ item.name }}" />
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name" /></h1>
+      <h1 class="charname">
+        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+      </h1>
       <table>
-				<tr>
-					<td>Cost</td>
-					<td>AP</td>
-					<td>Damage</td>
-					<td>Critical DV</td>
-					<td>STR Req.</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="number" name="system.cost" value="{{system.cost}}" />
-					</td>
-					<td>
-						<input type="number" name="system.apCost" value="{{system.apCost}}" />
-					</td>
-					<td>
-						<input type="text" name="system.damage.formula" value="{{system.damage.formula}}" />
-						</td>
-					<td>
-						<input type="text" name="system.critical.dice" value="{{system.critical.dice}}" />
-					</td>
-					<td>
-						<input type="number" name="system.strengthRequirement" value="{{system.strengthRequirement}}" />
-					</td>
-				</tr>
-				<tr>
-					<td>Ammo Type</td>
-					<td>Capacity</td>
-					<td>Load</td>
-					<td>Crit Bonus Roll</td>
-					<td>Crit Bonus Multiplier</td>
-				</tr>
-				<tr>
-					<td>
-						<input type="text" name="system.ammo.type" value="{{system.ammo.type}}" />
-					</td>
-					<td style="display: flex;align-items:center">
-						<input type="number" name="system.ammo.capacity.value" value="{{system.ammo.capacity.value}}" />
-						/
-						<input type="number" name="system.ammo.capacity.max" value="{{system.ammo.capacity.max}}" />
-					</td>
-					<td>
-						<input type="number" name="system.load" value="{{system.load}}" />
-					</td>
-					<td>
-						<input type="text" name="system.critical.bonus" value="{{system.critical.bonus}}" />
-					</td>
-					<td>
-						<input type="text" name="system.critical.multiplier" value="{{system.critical.multiplier}}" />
-					</td>
-				</tr>
-			</table>
-			<table class="equipped-stats">
-				<tr>
-					<td>Short Range:</td>
-					<td>
-						<input type="text" name="system.range.short" value="{{system.range.short}}" />
-					</td>
-				</tr>
-				<tr>
-					<td>Long Range:</td>
-					<td>
-						<input type="text" name="system.range.long" value="{{system.range.long}}">
-					</td>
-				</tr>
-			</table>
+        <tr>
+          <td>Cost</td>
+          <td>AP</td>
+          <td>Damage</td>
+          <td>Critical DV</td>
+          <td>STR Req.</td>
+        </tr>
+        <tr>
+          <td>
+            <input type="number" name="system.cost" value="{{ system.cost }}" />
+          </td>
+          <td>
+            <input type="number" name="system.apCost" value="{{ system.apCost }}" />
+          </td>
+          <td>
+            <input type="text" name="system.damage.formula" value="{{ system.damage.formula }}" />
+          </td>
+          <td>
+            <input type="text" name="system.critical.dice" value="{{ system.critical.dice }}" />
+          </td>
+          <td>
+            <input
+              type="number"
+              name="system.strengthRequirement"
+              value="{{ system.strengthRequirement }}"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td>Ammo Type</td>
+          <td>Capacity</td>
+          <td>Load</td>
+          <td>Crit Bonus Roll</td>
+          <td>Crit Bonus Multiplier</td>
+        </tr>
+        <tr>
+          <td>
+            <input type="text" name="system.ammo.type" value="{{ system.ammo.type }}" />
+          </td>
+          <td style="display: flex; align-items: center">
+            <input
+              type="number"
+              name="system.ammo.capacity.value"
+              value="{{ system.ammo.capacity.value }}"
+            />
+            /
+            <input
+              type="number"
+              name="system.ammo.capacity.max"
+              value="{{ system.ammo.capacity.max }}"
+            />
+          </td>
+          <td>
+            <input type="number" name="system.load" value="{{ system.load }}" />
+          </td>
+          <td>
+            <input type="text" name="system.critical.bonus" value="{{ system.critical.bonus }}" />
+          </td>
+          <td>
+            <input
+              type="text"
+              name="system.critical.multiplier"
+              value="{{ system.critical.multiplier }}"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="equipped-stats">
+        <tr>
+          <td>Short Range:</td>
+          <td>
+            <input type="text" name="system.range.short" value="{{ system.range.short }}" />
+          </td>
+        </tr>
+        <tr>
+          <td>Long Range:</td>
+          <td>
+            <input type="text" name="system.range.long" value="{{ system.range.long }}" />
+          </td>
+        </tr>
+      </table>
     </div>
   </header>
 
@@ -87,7 +105,6 @@
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
-
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
@@ -96,16 +113,12 @@
       editable=editable}}
     </div>
     {{!-- Upgrades Tab --}}
-    <div class="tab" data-group="primary" data-tab="upgrades">
-    </div>
+    <div class="tab" data-group="primary" data-tab="upgrades"></div>
 
     {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
       {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
     </div>
-
-
-
   </section>
 </form>
 
