--- a/templates/item/item-perk-sheet.hbs
+++ b/templates/item/item-perk-sheet.hbs
@@ -1,37 +1,57 @@
 <style>
-.sheet .editor-content{
-	line-height:2;
-}
+  .sheet .editor-content {
+    line-height: 2;
+  }
 </style>
 
-
-<form class="{{cssClass}}" autocomplete="off">
-<table><tr><td style="border:solid 1px;">{{system.repeat.value}}</td></tr></table>
-<input type="text" name="system.repeat.value" value="{{system.repeat.value}}" hidden/>
+<form class="{{ cssClass }}" autocomplete="off">
+  <table>
+    <tr>
+      <td style="border: solid 1px">{{ system.repeat.value }}</td>
+    </tr>
+  </table>
+  <input type="text" name="system.repeat.value" value="{{ system.repeat.value }}" hidden />
   <header class="sheet-header">
-    <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
+    <img class="profile-img" src="{{ item.img }}" data-edit="img" title="{{ item.name }}" />
     <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
-	  <table>
-<tr><td>Req:</td><td><input type="text" name="system.requirement.value" value="{{system.requirement.value}}" disabled/></td>
-<td><span>Qty:</span> <input style="width:35px;text-align:center;" type="number" min="1" name="system.perk-level.value" value="{{system.perk-level.value}}" /></td></tr>
-</table>
-
+      <h1 class="charname">
+        <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
+      </h1>
+      <table>
+        <tr>
+          <td>Req:</td>
+          <td>
+            <input
+              type="text"
+              name="system.requirement.value"
+              value="{{ system.requirement.value }}"
+              disabled
+            />
+          </td>
+          <td>
+            <span>Qty:</span>
+            <input
+              style="width: 35px; text-align: center"
+              type="number"
+              min="1"
+              name="system.perk-level.value"
+              value="{{ system.perk - level.value }}"
+            />
+          </td>
+        </tr>
+      </table>
     </div>
   </header>
-  
- {{!-- Sheet Tab Navigation --}}
- {{!-- Sheet Tab Navigation --}}
+
+  {{!-- Sheet Tab Navigation --}}
+  {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="effects">Effects</a> 
- </nav>
+    <a class="item" data-tab="effects">Effects</a>
+  </nav>
 
   {{!-- Sheet Body --}}
   <section class="sheet-body">
-
-
-
     {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
@@ -39,11 +59,10 @@
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner
       editable=editable}}
     </div>
- {{!-- Effects Tab --}}
+    {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
       {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
     </div>
-
   </section>
 </form>
 
