--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -130,10 +130,10 @@
 													</table>
 													<table class="current-caps">
 														<tr>
-															<td style="vertical-align:middle;"><img title="Karma Caps"
+															<td colspan=999 style="vertical-align:middle;"><img title="Karma Caps"
 																	style="border:none;" class="custom-icon"
-																	src="/systems/arcane-arcade-fallout/assets/KarmaCap.png" /></td>
-															<td><input id="caps" class="karma" type="number"
+																	src="/systems/arcane-arcade-fallout/assets/KarmaCap.png" />
+															<input id="caps" class="karma" type="number"
 																	name="system.karmaCaps.value" value="{{system.karmaCaps.value}}"
 																	min="0" max="{{system.karmaCaps.max}}" /> / <input id="caps"
 																	class="karma" type="number" name="system.karmaCaps.max"
