Repaired Item Sheet

--- a/templates/actor/parts/actor-medicines.hbs
+++ b/templates/actor/parts/actor-medicines.hbs
@@ -1,3 +1,4 @@
+Test
   {{#each medicines as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}'>
     <table style="border:solid 1px;">
