Undo of last commit

--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -71,7 +71,7 @@
                             <button class="collapsible allcaps" data-collapsible="true" data-item-id="{{item._id}}">{{item.name}}</button>
                         </td>
                     </tr>
-                    <tr style="display:none;" class="collapsible-content" data-collapsible-content="true" data-item-id="{{item._id}}">
+                    <tr style="display:table-row;" class="collapsible-content" data-collapsible-content="true" data-item-id="{{item._id}}">
                         <td>
                             <table class="equipped-stats">
                                 <tr>
@@ -191,7 +191,7 @@
                             <button class="collapsible allcaps" data-collapsible="true" data-item-id="{{item._id}}">{{item.name}}</button>
                         </td>
                     </tr>
-                    <tr style="display:none;" class="collapsible-content" data-collapsible-content="true" data-item-id="{{item._id}}">
+                    <tr style="display:table-row;" class="collapsible-content" data-collapsible-content="true" data-item-id="{{item._id}}">
                         <td>
                             <table class="equipped-stats">
                                 <tr>
