--- a/templates/actor/parts/actor-status.hbs
+++ b/templates/actor/parts/actor-status.hbs
@@ -26,7 +26,7 @@
                 }}+{{#with (lookup ../../system.abilities [abilityKey])}} {{
                   mod
                 }} {{/with}}-{{../../system.penaltyTotal}}"
-                data-label="{{ actor.name }} performed a {{
+                data-label="Performed a {{
                   skill.label
                 }} roll using {{#with (lookup ../../system.abilities [abilityKey])}} {{
                   label
