--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -20,7 +20,7 @@
           </td>
 
           <td>
-            {{ item.system.description }}
+            {{{ item.system.description }}}
           </td>
 
           <td>
