--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -51,28 +51,33 @@
                 </table>
             </div>
             {{/each}}
-        <!-- RangedWeapon Slot -->
-		<table>
-    <tr>
-        <button class="collapsible allcaps" data-collapsible="true">AMMO</button>
-        <td class="collapsible-content" data-collapsible-content="true" data-item-id="{{item._id}}">
+			
+			
+        <!-- AMMO Slot -->
+		
+	<button class="collapsible allcaps" data-collapsible="true" data-item-id="ammo">AMMO</button>		
+<table>
+		<tr class="collapsible-content" data-collapsible-content="true" data-item-id="ammo">
+		<td>
             {{#each ammos as |item id|}}
-                <div class='item flexrow' data-item-id='{{item._id}}' style="width:20%;display:block;float:left;margin-left:2%; border:1px solid #ccc; padding: 10px;">
+			<div data-item-id="{{item._id}}" style="float:left;width:24%;border:solid 1px;margin-left:1%;padding:10px;">			
+                <div class='item flexrow' data-item-id='{{item._id}}'>
                     <div class='item-controls' style="display:block;margin:auto;">
-                        <a style="float:left;" data-edit data-item-id="{{item._id}}" class='item-control' title='{{localize "DOCUMENT.Update" type="item"}}'>
+                        <a data-edit data-item-id="{{item._id}}" class='item-control' title='{{localize "DOCUMENT.Update" type="item"}}'>
                             {{item.name}} ({{system.quantity}})
                         </a>
-                        <a style="float:right;margin-right:10px;" class='item-control item-delete' data-item-id="{{item._id}}" title='{{localize "DOCUMENT.Delete" type="item"}}'>
+                        <a class='item-control item-delete' data-item-id="{{item._id}}" title='{{localize "DOCUMENT.Delete" type="item"}}'>
                             <i class='fas fa-trash'></i>
                         </a>
                     </div>
                 </div>
+			</div>
             {{/each}}
         </td>
     </tr>
 </table>
 
-				
+	        <!-- Ranged Weapons Slot -->			
             {{#each rangedWeapons as |item id|}}
             <div style="width:48%;display:block;float:left;margin-left:2%;" class='item flexrow' data-item-id='{{item._id}}'>
                 <table class="weapontable" style="border:solid 1px;">
