--- a/templates/actor/parts/npc-status.hbs
+++ b/templates/actor/parts/npc-status.hbs
@@ -51,7 +51,7 @@
             <input type="number" name="system.combatSequence" value="{{ system.combatSequence }}" />
           </td>
           <td>
-            <input type="number" name="system.passiveSense" value="{{ system.passiveSense }}" />
+            <input type="number" name="system.npcPassivesense" value="{{ system.npcPassivesense }}" />
           </td>
         </tr>
         <tr>
