--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -60,15 +60,16 @@
 		<tr class="collapsible-content" data-collapsible-content="true" data-item-id="ammo">
 		<td>
             {{#each ammos as |item id|}}
-			<div data-item-id="{{item._id}}" style="float:left;width:24%;border:solid 1px;margin-left:1%;padding:10px;">			
-                <div class='item flexrow' data-item-id='{{item._id}}'>
+			<div data-item-id="{{item._id}}" style="float:left;width:25%;">			
+                <div style="width:100%;border:solid 1px;padding:10px 10px 10px 10px" class='item flexrow' data-item-id='{{item._id}}'>
                     <div class='item-controls' style="display:block;margin:auto;">
-                        <a data-edit data-item-id="{{item._id}}" class='item-control' title='{{localize "DOCUMENT.Update" type="item"}}'>
-                            {{item.name}} ({{system.quantity}})
-                        </a>
-                        <a class='item-control item-delete' data-item-id="{{item._id}}" title='{{localize "DOCUMENT.Delete" type="item"}}'>
+                        <a style="float:right;" class='item-control item-delete' data-item-id="{{item._id}}" title='{{localize "DOCUMENT.Delete" type="item"}}'>
                             <i class='fas fa-trash'></i>
                         </a>
+                        <a style="float:left;" data-edit data-item-id="{{item._id}}" class='item-control' title='{{localize "DOCUMENT.Update" type="item"}}'>
+                            {{item.name}} ({{system.quantity}})
+                        </a>
+
                     </div>
                 </div>
 			</div>
