--- a/templates/actor/parts/actor-medicines.hbs
+++ b/templates/actor/parts/actor-medicines.hbs
@@ -6,7 +6,7 @@
         {{ item.name }} ({{ system.itemQty.value }})
       </td>
       <td></td>
-      <td style="text-align: left">{{ item.system.description }}</td>
+      <td style="text-align: left">{{{ item.system.description }}}</td>
       <td style="width: 50px; vertical-align: bottom">
         <div class="item-controls">
           <div class="item-controls">
